<resources>
    <string name="app_name">BlogApp</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_comment">Write Comment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="textview">TextView</string>
    <string name="mail_adress">Mail Adress</string>
    <string name="login">Login</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="text_comment_goes_here">Text Comment Goes Here</string>
    <string name="textview_1">TextView</string>
    <string name="_10_20">10:20</string>
    <string name="reg_account">Register new account</string>
    <string name="back_login">Already had an account? Log in</string>
    <string name="about_us">About us</string>
    <string name="Search">Search</string>
    <string name="uit_blog">Uit Blog</string>
    <string name="confirm_pro5">Confirm the new profile</string>
</resources>
